# befunge-interpreter

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: build.yml
designs/: overview.pu
pkg/: befunge_interpreter.d.ts  befunge_interpreter.js  befunge_interpreter_bg.d.ts  befunge_interpreter_bg.wasm  package.json
src/: console.rs  exec.rs  index.tsx  lib.rs  option.rs  visualization.rs
src/components/: Input.tsx  Option.tsx  Output.tsx
src/pages/: index.tsx
