[package]
name = "befunge-interpreter"
version = "0.1.0"
authors = ["jpnykw <jpnykw@gmail.com>", "luckylat <lacklat.key@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlTextAreaElement",
  "HtmlCollection"
]